k8s/001-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brennonloveless-com
  namespace: brennonloveless-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brennonloveless-com
      component: server
  template:
    metadata:
      labels:
        app: brennonloveless-com
        component: server
    spec:
      containers:
      - name: brennonloveless-com
        image: bloveless/brennonloveless-com:0.1.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ghcr-docker-config
