k8s/002-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brennonloveless-com
  namespace: brennonloveless-com
spec:
  selector:
    app: brennonloveless-com
    component: server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
